Add responsive design

--- a/InstagramApplication/InstagramApplication.csproj
+++ b/InstagramApplication/InstagramApplication.csproj
@@ -174,11 +174,15 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Style.css" />
+    <Content Include="Content\reset.css" />
+    <Content Include="Content\style-standard.css" />
+    <Content Include="Content\style.css" />
+    <Content Include="Content\style-small.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\instagram.svg" />
     <Content Include="Scripts\ai.0.22.19-build00125.js" />
     <Content Include="Scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Scripts\bootstrap.js" />
